--- a/.github/workflows/quote.yml
+++ b/.github/workflows/quote.yml
@@ -3,7 +3,7 @@ name: Update Daily Quote
 on:
   schedule:
     - cron: "0 6 * * *"   # Runs daily at 06:00 UTC
-  workflow_dispatch:       # Allow manual run
+  workflow_dispatch:       # Manual trigger
 
 jobs:
   update-quote:
@@ -12,14 +12,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      - name: Install tools
+        run: sudo apt-get update && sudo apt-get install -y jq curl
 
       - name: Get Random Quote
         run: |
           curl -s https://api.quotable.io/random > quote.json
           QUOTE=$(jq -r '.content' quote.json)
           AUTHOR=$(jq -r '.author' quote.json)
+
           echo "# Daily Quote" > quotes.md
           echo "" >> quotes.md
           echo "> $QUOTE" >> quotes.md
@@ -28,8 +29,8 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add quotes.md
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add quotes.md || true
           git commit -m "Update quote: $(date)" || echo "No changes to commit"
-          git push
+          git push origin HEAD:main
