--- a/.github/workflows/quote.yml
+++ b/.github/workflows/quote.yml
@@ -5,12 +5,17 @@ on:
     - cron: "0 6 * * *"   # Runs daily at 06:00 UTC
   workflow_dispatch:       # Manual trigger
 
+permissions:
+  contents: write    # <-- allows commit & push
+
 jobs:
   update-quote:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install tools
         run: sudo apt-get update && sudo apt-get install -y jq curl
@@ -33,4 +38,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add quotes.md || true
           git commit -m "Update quote: $(date)" || echo "No changes to commit"
-          git push origin HEAD:main
+          git push
