--- a/.github/workflows/quote.yml
+++ b/.github/workflows/quote.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add README.md quotes.md
-          git commit -m "Update daily quote" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ANDREA-NARCIS/daily-quotes.git main
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add quotes.md || true
+          git commit -m "Update quote: $(date)" || echo "No changes to commit"
+          git push    
