--- a/.github/workflows/quote.yml
+++ b/.github/workflows/quote.yml
@@ -3,10 +3,10 @@ name: Update Daily Quote
 on:
   schedule:
     - cron: "0 6 * * *"   # Runs daily at 06:00 UTC
-  workflow_dispatch:       # Manual trigger
+  workflow_dispatch:       # Allow manual trigger
 
 permissions:
-  contents: write    # <-- allows commit & push
+  contents: write    # allow commit & push
 
 jobs:
   update-quote:
@@ -32,10 +32,14 @@ jobs:
           echo "" >> quotes.md
           echo "— $AUTHOR" >> quotes.md
 
+      - name: Add dummy change (so commit always differs)
+        run: |
+          date +%s > .daily-commit.txt
+
       - name: Commit changes
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add quotes.md || true
-          git commit -m "Update quote: $(date)" || echo "No changes to commit"
-          git push
+          git add quotes.md .daily-commit.txt
+          git commit -m "Daily update: $(date)" || echo "No changes to commit"
+          git push origin main
